# floodriskmapping

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: config_delft.yaml  config_nice.yaml
data/Browser_images/: 2026-02-26-00:00_2026-02-26-23:59_DEM_COPERNICUS_30_Topographic.tiff
data/inter/: .gitignore  coastline_buffer_mask_delft_5000.0m.tif.dvc  coastline_buffer_mask_nice_5000.0m.tif.dvc
data/processed/: .gitignore  coastline_buffer_mask.tif  coastline_matched_delft.gpkg  flood_map.png.dvc  flood_mask_delft.tif  flood_mask_delft.tif.dvc  flood_mask_nice.tif  flood_polygons.gpkg  flood_polygons_delft.gpkg  flood_polygons_delft.gpkg.dvc  flood_polygons_nice.gpkg  flood_polygons_nice.gpkg.dvc  flood_summary_delft.txt  flood_summary_delft.txt.dvc  flood_summary_nice.txt
data/raw/: .gitignore  2026-02-26-00:00_2026-02-26-23:59_DEM_COPERNICUS_30_DEM_(Raw).tiff  dem_delft.tif.dvc  dem_nice.tif.dvc  ne_10m_coastline.dvc
docs/: cloud.md  docker.md
notebooks/: exploration.ipynb
src/: coastline.py  coastline_buffer.py  config.py  load_data.py  pipeline.py  viz.py
tests/: test_coastline_buffer.py  test_config.py  test_load_data.py  test_pipeline.py  test_viz.py
